--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,13 @@ body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 16px;
+  line-height:1.7;
+  color: #777;
+  padding: 30px;
+  
+
+  font-weight: 400;
+  font-size: 16px;
   color: #777;
   line-height: 1.7;
   /* padding: 30px; */
@@ -61,6 +68,14 @@ body {
   animation-name: moveInLeft;
   animation-duration: 1.5s;
   animation-timing-function: ease-out;
+}
+
+.header{
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(128, 214, 113, 0.8),rgba(40, 180, 133, 0.8)) , url('../img/hero.jpg');
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 75%,0 100%);
 }
 
 /* animation-delay: 1s; 
